# fizzbuzz-py

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: fizzbuzz.py
src/fizzbuzz/: fizzbuzz.py
tests/: fizzbuzz_test.py  test_fizzbuzz.py
