[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["Bryan Borgeson <bryborge@gmail.com>"]
readme = "README.md"
packages = [{include = "fizzbuzz", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
