[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["Bryan Borgeson <bryborge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
